# MoneyTracker

./: LICENSE  pyproject.toml
.github/workflows/: docker_images_build.yml  mail_poller-build.yml
llm_agent/: .dockerfile
llm_agent/src/: agent.py
mail_poller/: .dockerfile
mail_poller/src/: mail_poller.py  mail_services.py  main.py
money_bot/: .dockerfile
money_bot/src/: bot.py
money_bot/src/database/: database.py  models.py
